# kosik-workshop

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  report.md
.github/workflows/: ci.yml  eval-gate.yml
.langgraph_api/: .langgraph_ops.pckl
data/: products.json
docs/: workshop_agenda.md
notebooks/: 00_hello_langchain.ipynb  01_tools_playground.ipynb  02_prompt_and_agent.ipynb  03_evals.ipynb  04_pii_redaction.ipynb  05_ab_prompts.ipynb  06_human_feedback_loop.ipynb  07_rag_eval.ipynb
presentation/: package.json  pnpm-lock.yaml
presentation/src/: App.tsx  index.css
scripts/: build_index.py  chat_app.py  check_scenarios.py  ci_eval_gate.py  diagnose_redaction.py  eval_human_agreement.py  generate_catalog.py  promote_annotations_to_dataset.py  promote_prompt.py  push_prompt.py  run_ab_eval.py  run_demo.py  seed_annotation_queue.py  seed_eval_dataset.py
src/kosik_workshop/: agent.py  config.py  tools.py  user_prefs.py
src/kosik_workshop/catalog/: __init__.py  generator.py  schema.py  store.py  taxonomy.py  validate.py
src/kosik_workshop/evals/: __init__.py  dataset.py  evaluators.py  runner.py
src/kosik_workshop/prompts/: __init__.py  kosik_assistant.py  loader.py  variants.py
src/kosik_workshop/simulation/: __init__.py  demo_queries.py  demo_users.py  runner.py
src/kosik_workshop/tracing/: __init__.py  redaction.py
tests/: test_catalog_schema.py  test_catalog_taxonomy.py  test_catalog_validate.py  test_smoke.py  test_tools.py
