[project]
name = "kosik-workshop"
version = "0.0.1"
description = "Workshop sandbox for LangChain + LangSmith experiments."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Petr Malík", email = "info@malikpetr.cz" }]
dependencies = [
    "openai>=1.50",
    "langsmith>=0.1",
    "langchain-chroma>=0.1",
    "langchain-openai>=0.2",
    "chromadb>=0.5",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "langgraph>=1.1.9",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "pandas>=3.0.2",
]
notebook = [
    "jupyterlab>=4.2",
    "notebook>=7.2",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kosik_workshop"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["notebooks/", "\\.venv/"]
